parser.output
Terminals unused in grammar

   TRUE
   FALSE


State 11 conflicts: 8 shift/reduce
State 14 conflicts: 8 shift/reduce
State 15 conflicts: 8 shift/reduce
State 16 conflicts: 8 shift/reduce
State 21 conflicts: 8 shift/reduce
State 62 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 128 conflicts: 15 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 171 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 175 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 193 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Decl

    2 Decl: VariableDecl OtraDecl
    3     | FunctionDecl OtraDecl
    4     | ClassDecl OtraDecl
    5     | InterfaceDecl OtraDecl

    6 OtraDecl: Decl OtraDecl
    7         | %empty

    8 VariableDecl: Variable SEMICOLON

    9 Variable: Type ID

   10 Type: INT
   11     | DOUBLE
   12     | BOOL
   13     | STRING
   14     | ID
   15     | Type LBRACKET RBRACKET

   16 FunctionDecl: Type ID LPAREN Formals RPAREN StmtBlock
   17             | VOID ID LPAREN Formals RPAREN StmtBlock

   18 Formals: Variable FormalsVars
   19        | %empty

   20 FormalsVars: COMMA Variable FormalsVars
   21            | %empty

   22 ClassDecl: CLASS ID ExtendDecl ImplementsDecl LBRACE Field RBRACE

   23 ExtendDecl: EXTENDS ID
   24           | %empty

   25 ImplementsDecl: IMPLEMENTS ID OtroID
   26               | %empty

   27 OtroID: COMMA ID OtroID
   28       | %empty

   29 Field: VariableDecl Field
   30      | FunctionDecl Field
   31      | %empty

   32 InterfaceDecl: INTERFACE ID LBRACE Prototype RBRACE

   33 Prototype: Type ID LPAREN Formals RPAREN SEMICOLON Prototype
   34          | VOID ID LPAREN Formals RPAREN SEMICOLON Prototype
   35          | %empty

   36 StmtBlock: LBRACE BlockVariables BlockStmts RBRACE

   37 BlockVariables: VariableDecl BlockVariables
   38               | %empty

   39 BlockStmts: Stmt BlockStmts
   40           | %empty

   41 Stmt: ExprOpcional SEMICOLON
   42     | IfStmt
   43     | WhileStmt
   44     | ForStmt
   45     | BreakStmt
   46     | ReturnStmt
   47     | PrintStmt
   48     | StmtBlock

   49 IfStmt: IF LPAREN Expr RPAREN Stmt ElseStmt

   50 ElseStmt: ELSE Stmt
   51         | %empty

   52 WhileStmt: WHILE LPAREN Expr RPAREN Stmt

   53 ForStmt: FOR LPAREN ExprOpcional SEMICOLON ExprOpcional SEMICOLON ExprOpcional RPAREN Stmt

   54 ReturnStmt: RETURN ExprOpcional SEMICOLON

   55 BreakStmt: BREAK SEMICOLON

   56 PrintStmt: PRINT LPAREN Expr OtraExpr RPAREN SEMICOLON

   57 OtraExpr: COMMA Expr OtraExpr
   58         | %empty

   59 ExprOpcional: Expr
   60             | %empty

   61 Expr: LValue EQUAL Expr
   62     | Constant
   63     | LValue
   64     | THIS
   65     | Call
   66     | LPAREN Expr RPAREN
   67     | Expr SUM Expr
   68     | Expr SUBTRACTION Expr
   69     | Expr MULTIPLICATION Expr
   70     | Expr DIVISION Expr
   71     | Expr MODULE Expr
   72     | SUBTRACTION Expr
   73     | Expr LESSTHAN Expr
   74     | Expr LESSEQUALTHAN Expr
   75     | Expr GREATERTHAN Expr
   76     | Expr GREATEREQUALTHAN Expr
   77     | Expr EEQUAL Expr
   78     | Expr DISTINCT Expr
   79     | Expr AND Expr
   80     | Expr OR Expr
   81     | NEGATION Expr
   82     | READINTEGER LPAREN RPAREN
   83     | READLINE LPAREN RPAREN
   84     | NEW LPAREN ID RPAREN
   85     | NEWARRAY LPAREN Expr COMMA Type RPAREN

   86 LValue: ID
   87       | Expr DOT ID
   88       | Expr LBRACKET Expr RBRACKET

   89 Call: ID LPAREN Actuals RPAREN
   90     | Expr DOT ID LPAREN Actuals RPAREN

   91 Actuals: Expr OtraExpr
   92        | %empty

   93 Constant: CONSINTEGERDEC
   94         | CONSINTEGERHEX
   95         | CONSDOUBLEDEC
   96         | CONSDOUBLECIEN
   97         | CONSBOOLEAN
   98         | CONSSTRING
   99         | TNULL


Terminals, with rules where they appear

$end (0) 0
error (256)
CLASS (258) 22
VOID (259) 17 34
STRING (260) 13
THIS (261) 64
WHILE (262) 52
BREAK (263) 55
READINTEGER (264) 82
INT (265) 10
EXTENDS (266) 23
IF (267) 49
NEW (268) 84
READLINE (269) 83
DOUBLE (270) 11
INTERFACE (271) 32
IMPLEMENTS (272) 25
ELSE (273) 50
NEWARRAY (274) 85
TRUE (275)
BOOL (276) 12
TNULL (277) 99
FOR (278) 53
RETURN (279) 54
PRINT (280) 56
FALSE (281)
ID (282) 9 14 16 17 22 23 25 27 32 33 34 84 86 87 89 90
CONSINTEGERDEC (283) 93
CONSINTEGERHEX (284) 94
CONSDOUBLEDEC (285) 95
CONSDOUBLECIEN (286) 96
CONSSTRING (287) 98
CONSBOOLEAN (288) 97
SUM (289) 67
SUBTRACTION (290) 68 72
MULTIPLICATION (291) 69
DIVISION (292) 70
MODULE (293) 71
LESSTHAN (294) 73
LESSEQUALTHAN (295) 74
GREATERTHAN (296) 75
GREATEREQUALTHAN (297) 76
EQUAL (298) 61
EEQUAL (299) 77
DISTINCT (300) 78
AND (301) 79
OR (302) 80
NEGATION (303) 81
SEMICOLON (304) 8 33 34 41 53 54 55 56
COMMA (305) 20 27 57 85
DOT (306) 87 90
LBRACKET (307) 15 88
RBRACKET (308) 15 88
LPAREN (309) 16 17 33 34 49 52 53 56 66 82 83 84 85 89 90
RPAREN (310) 16 17 33 34 49 52 53 56 66 82 83 84 85 89 90
LBRACE (311) 22 32 36
RBRACE (312) 22 32 36


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Program (59)
    on left: 1, on right: 0
Decl (60)
    on left: 2 3 4 5, on right: 1 6
OtraDecl (61)
    on left: 6 7, on right: 2 3 4 5 6
VariableDecl (62)
    on left: 8, on right: 2 29 37
Variable (63)
    on left: 9, on right: 8 18 20
Type (64)
    on left: 10 11 12 13 14 15, on right: 9 15 16 33 85
FunctionDecl (65)
    on left: 16 17, on right: 3 30
Formals (66)
    on left: 18 19, on right: 16 17 33 34
FormalsVars (67)
    on left: 20 21, on right: 18 20
ClassDecl (68)
    on left: 22, on right: 4
ExtendDecl (69)
    on left: 23 24, on right: 22
ImplementsDecl (70)
    on left: 25 26, on right: 22
OtroID (71)
    on left: 27 28, on right: 25 27
Field (72)
    on left: 29 30 31, on right: 22 29 30
InterfaceDecl (73)
    on left: 32, on right: 5
Prototype (74)
    on left: 33 34 35, on right: 32 33 34
StmtBlock (75)
    on left: 36, on right: 16 17 48
BlockVariables (76)
    on left: 37 38, on right: 36 37
BlockStmts (77)
    on left: 39 40, on right: 36 39
Stmt (78)
    on left: 41 42 43 44 45 46 47 48, on right: 39 49 50 52 53
IfStmt (79)
    on left: 49, on right: 42
ElseStmt (80)
    on left: 50 51, on right: 49
WhileStmt (81)
    on left: 52, on right: 43
ForStmt (82)
    on left: 53, on right: 44
ReturnStmt (83)
    on left: 54, on right: 46
BreakStmt (84)
    on left: 55, on right: 45
PrintStmt (85)
    on left: 56, on right: 47
OtraExpr (86)
    on left: 57 58, on right: 56 57 91
ExprOpcional (87)
    on left: 59 60, on right: 41 53 54
Expr (88)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85, on right: 49 52 56 57 59 61 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 85 87 88 90 91
LValue (89)
    on left: 86 87 88, on right: 61 63
Call (90)
    on left: 89 90, on right: 65
Actuals (91)
    on left: 91 92, on right: 89 90
Constant (92)
    on left: 93 94 95 96 97 98 99, on right: 62


State 0

    0 $accept: . Program $end

    CLASS      shift, and go to state 1
    VOID       shift, and go to state 2
    STRING     shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    INTERFACE  shift, and go to state 6
    BOOL       shift, and go to state 7
    ID         shift, and go to state 8

    Program        go to state 9
    Decl           go to state 10
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 1

   22 ClassDecl: CLASS . ID ExtendDecl ImplementsDecl LBRACE Field RBRACE

    ID  shift, and go to state 17


State 2

   17 FunctionDecl: VOID . ID LPAREN Formals RPAREN StmtBlock

    ID  shift, and go to state 18


State 3

   13 Type: STRING .

    $default  reduce using rule 13 (Type)


State 4

   10 Type: INT .

    $default  reduce using rule 10 (Type)


State 5

   11 Type: DOUBLE .

    $default  reduce using rule 11 (Type)


State 6

   32 InterfaceDecl: INTERFACE . ID LBRACE Prototype RBRACE

    ID  shift, and go to state 19


State 7

   12 Type: BOOL .

    $default  reduce using rule 12 (Type)


State 8

   14 Type: ID .

    $default  reduce using rule 14 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 20


State 10

    1 Program: Decl .

    $default  reduce using rule 1 (Program)


State 11

    2 Decl: VariableDecl . OtraDecl

    CLASS      shift, and go to state 1
    VOID       shift, and go to state 2
    STRING     shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    INTERFACE  shift, and go to state 6
    BOOL       shift, and go to state 7
    ID         shift, and go to state 8

    CLASS      [reduce using rule 7 (OtraDecl)]
    VOID       [reduce using rule 7 (OtraDecl)]
    STRING     [reduce using rule 7 (OtraDecl)]
    INT        [reduce using rule 7 (OtraDecl)]
    DOUBLE     [reduce using rule 7 (OtraDecl)]
    INTERFACE  [reduce using rule 7 (OtraDecl)]
    BOOL       [reduce using rule 7 (OtraDecl)]
    ID         [reduce using rule 7 (OtraDecl)]
    $default   reduce using rule 7 (OtraDecl)

    Decl           go to state 21
    OtraDecl       go to state 22
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 12

    8 VariableDecl: Variable . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 13

    9 Variable: Type . ID
   15 Type: Type . LBRACKET RBRACKET
   16 FunctionDecl: Type . ID LPAREN Formals RPAREN StmtBlock

    ID        shift, and go to state 24
    LBRACKET  shift, and go to state 25


State 14

    3 Decl: FunctionDecl . OtraDecl

    CLASS      shift, and go to state 1
    VOID       shift, and go to state 2
    STRING     shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    INTERFACE  shift, and go to state 6
    BOOL       shift, and go to state 7
    ID         shift, and go to state 8

    CLASS      [reduce using rule 7 (OtraDecl)]
    VOID       [reduce using rule 7 (OtraDecl)]
    STRING     [reduce using rule 7 (OtraDecl)]
    INT        [reduce using rule 7 (OtraDecl)]
    DOUBLE     [reduce using rule 7 (OtraDecl)]
    INTERFACE  [reduce using rule 7 (OtraDecl)]
    BOOL       [reduce using rule 7 (OtraDecl)]
    ID         [reduce using rule 7 (OtraDecl)]
    $default   reduce using rule 7 (OtraDecl)

    Decl           go to state 21
    OtraDecl       go to state 26
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 15

    4 Decl: ClassDecl . OtraDecl

    CLASS      shift, and go to state 1
    VOID       shift, and go to state 2
    STRING     shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    INTERFACE  shift, and go to state 6
    BOOL       shift, and go to state 7
    ID         shift, and go to state 8

    CLASS      [reduce using rule 7 (OtraDecl)]
    VOID       [reduce using rule 7 (OtraDecl)]
    STRING     [reduce using rule 7 (OtraDecl)]
    INT        [reduce using rule 7 (OtraDecl)]
    DOUBLE     [reduce using rule 7 (OtraDecl)]
    INTERFACE  [reduce using rule 7 (OtraDecl)]
    BOOL       [reduce using rule 7 (OtraDecl)]
    ID         [reduce using rule 7 (OtraDecl)]
    $default   reduce using rule 7 (OtraDecl)

    Decl           go to state 21
    OtraDecl       go to state 27
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 16

    5 Decl: InterfaceDecl . OtraDecl

    CLASS      shift, and go to state 1
    VOID       shift, and go to state 2
    STRING     shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    INTERFACE  shift, and go to state 6
    BOOL       shift, and go to state 7
    ID         shift, and go to state 8

    CLASS      [reduce using rule 7 (OtraDecl)]
    VOID       [reduce using rule 7 (OtraDecl)]
    STRING     [reduce using rule 7 (OtraDecl)]
    INT        [reduce using rule 7 (OtraDecl)]
    DOUBLE     [reduce using rule 7 (OtraDecl)]
    INTERFACE  [reduce using rule 7 (OtraDecl)]
    BOOL       [reduce using rule 7 (OtraDecl)]
    ID         [reduce using rule 7 (OtraDecl)]
    $default   reduce using rule 7 (OtraDecl)

    Decl           go to state 21
    OtraDecl       go to state 28
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 17

   22 ClassDecl: CLASS ID . ExtendDecl ImplementsDecl LBRACE Field RBRACE

    EXTENDS  shift, and go to state 29

    $default  reduce using rule 24 (ExtendDecl)

    ExtendDecl  go to state 30


State 18

   17 FunctionDecl: VOID ID . LPAREN Formals RPAREN StmtBlock

    LPAREN  shift, and go to state 31


State 19

   32 InterfaceDecl: INTERFACE ID . LBRACE Prototype RBRACE

    LBRACE  shift, and go to state 32


State 20

    0 $accept: Program $end .

    $default  accept


State 21

    6 OtraDecl: Decl . OtraDecl

    CLASS      shift, and go to state 1
    VOID       shift, and go to state 2
    STRING     shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    INTERFACE  shift, and go to state 6
    BOOL       shift, and go to state 7
    ID         shift, and go to state 8

    CLASS      [reduce using rule 7 (OtraDecl)]
    VOID       [reduce using rule 7 (OtraDecl)]
    STRING     [reduce using rule 7 (OtraDecl)]
    INT        [reduce using rule 7 (OtraDecl)]
    DOUBLE     [reduce using rule 7 (OtraDecl)]
    INTERFACE  [reduce using rule 7 (OtraDecl)]
    BOOL       [reduce using rule 7 (OtraDecl)]
    ID         [reduce using rule 7 (OtraDecl)]
    $default   reduce using rule 7 (OtraDecl)

    Decl           go to state 21
    OtraDecl       go to state 33
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 22

    2 Decl: VariableDecl OtraDecl .

    $default  reduce using rule 2 (Decl)


State 23

    8 VariableDecl: Variable SEMICOLON .

    $default  reduce using rule 8 (VariableDecl)


State 24

    9 Variable: Type ID .
   16 FunctionDecl: Type ID . LPAREN Formals RPAREN StmtBlock

    LPAREN  shift, and go to state 34

    $default  reduce using rule 9 (Variable)


State 25

   15 Type: Type LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 35


State 26

    3 Decl: FunctionDecl OtraDecl .

    $default  reduce using rule 3 (Decl)


State 27

    4 Decl: ClassDecl OtraDecl .

    $default  reduce using rule 4 (Decl)


State 28

    5 Decl: InterfaceDecl OtraDecl .

    $default  reduce using rule 5 (Decl)


State 29

   23 ExtendDecl: EXTENDS . ID

    ID  shift, and go to state 36


State 30

   22 ClassDecl: CLASS ID ExtendDecl . ImplementsDecl LBRACE Field RBRACE

    IMPLEMENTS  shift, and go to state 37

    $default  reduce using rule 26 (ImplementsDecl)

    ImplementsDecl  go to state 38


State 31

   17 FunctionDecl: VOID ID LPAREN . Formals RPAREN StmtBlock

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable  go to state 39
    Type      go to state 40
    Formals   go to state 41


State 32

   32 InterfaceDecl: INTERFACE ID LBRACE . Prototype RBRACE

    VOID    shift, and go to state 42
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 35 (Prototype)

    Type       go to state 43
    Prototype  go to state 44


State 33

    6 OtraDecl: Decl OtraDecl .

    $default  reduce using rule 6 (OtraDecl)


State 34

   16 FunctionDecl: Type ID LPAREN . Formals RPAREN StmtBlock

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable  go to state 39
    Type      go to state 40
    Formals   go to state 45


State 35

   15 Type: Type LBRACKET RBRACKET .

    $default  reduce using rule 15 (Type)


State 36

   23 ExtendDecl: EXTENDS ID .

    $default  reduce using rule 23 (ExtendDecl)


State 37

   25 ImplementsDecl: IMPLEMENTS . ID OtroID

    ID  shift, and go to state 46


State 38

   22 ClassDecl: CLASS ID ExtendDecl ImplementsDecl . LBRACE Field RBRACE

    LBRACE  shift, and go to state 47


State 39

   18 Formals: Variable . FormalsVars

    COMMA  shift, and go to state 48

    $default  reduce using rule 21 (FormalsVars)

    FormalsVars  go to state 49


State 40

    9 Variable: Type . ID
   15 Type: Type . LBRACKET RBRACKET

    ID        shift, and go to state 50
    LBRACKET  shift, and go to state 25


State 41

   17 FunctionDecl: VOID ID LPAREN Formals . RPAREN StmtBlock

    RPAREN  shift, and go to state 51


State 42

   34 Prototype: VOID . ID LPAREN Formals RPAREN SEMICOLON Prototype

    ID  shift, and go to state 52


State 43

   15 Type: Type . LBRACKET RBRACKET
   33 Prototype: Type . ID LPAREN Formals RPAREN SEMICOLON Prototype

    ID        shift, and go to state 53
    LBRACKET  shift, and go to state 25


State 44

   32 InterfaceDecl: INTERFACE ID LBRACE Prototype . RBRACE

    RBRACE  shift, and go to state 54


State 45

   16 FunctionDecl: Type ID LPAREN Formals . RPAREN StmtBlock

    RPAREN  shift, and go to state 55


State 46

   25 ImplementsDecl: IMPLEMENTS ID . OtroID

    COMMA  shift, and go to state 56

    $default  reduce using rule 28 (OtroID)

    OtroID  go to state 57


State 47

   22 ClassDecl: CLASS ID ExtendDecl ImplementsDecl LBRACE . Field RBRACE

    VOID    shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 31 (Field)

    VariableDecl  go to state 58
    Variable      go to state 12
    Type          go to state 13
    FunctionDecl  go to state 59
    Field         go to state 60


State 48

   20 FormalsVars: COMMA . Variable FormalsVars

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    Variable  go to state 61
    Type      go to state 40


State 49

   18 Formals: Variable FormalsVars .

    $default  reduce using rule 18 (Formals)


State 50

    9 Variable: Type ID .

    $default  reduce using rule 9 (Variable)


State 51

   17 FunctionDecl: VOID ID LPAREN Formals RPAREN . StmtBlock

    LBRACE  shift, and go to state 62

    StmtBlock  go to state 63


State 52

   34 Prototype: VOID ID . LPAREN Formals RPAREN SEMICOLON Prototype

    LPAREN  shift, and go to state 64


State 53

   33 Prototype: Type ID . LPAREN Formals RPAREN SEMICOLON Prototype

    LPAREN  shift, and go to state 65


State 54

   32 InterfaceDecl: INTERFACE ID LBRACE Prototype RBRACE .

    $default  reduce using rule 32 (InterfaceDecl)


State 55

   16 FunctionDecl: Type ID LPAREN Formals RPAREN . StmtBlock

    LBRACE  shift, and go to state 62

    StmtBlock  go to state 66


State 56

   27 OtroID: COMMA . ID OtroID

    ID  shift, and go to state 67


State 57

   25 ImplementsDecl: IMPLEMENTS ID OtroID .

    $default  reduce using rule 25 (ImplementsDecl)


State 58

   29 Field: VariableDecl . Field

    VOID    shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 31 (Field)

    VariableDecl  go to state 58
    Variable      go to state 12
    Type          go to state 13
    FunctionDecl  go to state 59
    Field         go to state 68


State 59

   30 Field: FunctionDecl . Field

    VOID    shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 31 (Field)

    VariableDecl  go to state 58
    Variable      go to state 12
    Type          go to state 13
    FunctionDecl  go to state 59
    Field         go to state 69


State 60

   22 ClassDecl: CLASS ID ExtendDecl ImplementsDecl LBRACE Field . RBRACE

    RBRACE  shift, and go to state 70


State 61

   20 FormalsVars: COMMA Variable . FormalsVars

    COMMA  shift, and go to state 48

    $default  reduce using rule 21 (FormalsVars)

    FormalsVars  go to state 71


State 62

   36 StmtBlock: LBRACE . BlockVariables BlockStmts RBRACE

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    ID        [reduce using rule 38 (BlockVariables)]
    $default  reduce using rule 38 (BlockVariables)

    VariableDecl    go to state 72
    Variable        go to state 12
    Type            go to state 40
    BlockVariables  go to state 73


State 63

   17 FunctionDecl: VOID ID LPAREN Formals RPAREN StmtBlock .

    $default  reduce using rule 17 (FunctionDecl)


State 64

   34 Prototype: VOID ID LPAREN . Formals RPAREN SEMICOLON Prototype

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable  go to state 39
    Type      go to state 40
    Formals   go to state 74


State 65

   33 Prototype: Type ID LPAREN . Formals RPAREN SEMICOLON Prototype

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable  go to state 39
    Type      go to state 40
    Formals   go to state 75


State 66

   16 FunctionDecl: Type ID LPAREN Formals RPAREN StmtBlock .

    $default  reduce using rule 16 (FunctionDecl)


State 67

   27 OtroID: COMMA ID . OtroID

    COMMA  shift, and go to state 56

    $default  reduce using rule 28 (OtroID)

    OtroID  go to state 76


State 68

   29 Field: VariableDecl Field .

    $default  reduce using rule 29 (Field)


State 69

   30 Field: FunctionDecl Field .

    $default  reduce using rule 30 (Field)


State 70

   22 ClassDecl: CLASS ID ExtendDecl ImplementsDecl LBRACE Field RBRACE .

    $default  reduce using rule 22 (ClassDecl)


State 71

   20 FormalsVars: COMMA Variable FormalsVars .

    $default  reduce using rule 20 (FormalsVars)


State 72

   37 BlockVariables: VariableDecl . BlockVariables

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    BOOL    shift, and go to state 7
    ID      shift, and go to state 8

    ID        [reduce using rule 38 (BlockVariables)]
    $default  reduce using rule 38 (BlockVariables)

    VariableDecl    go to state 72
    Variable        go to state 12
    Type            go to state 40
    BlockVariables  go to state 77


State 73

   36 StmtBlock: LBRACE BlockVariables . BlockStmts RBRACE

    THIS            shift, and go to state 78
    WHILE           shift, and go to state 79
    BREAK           shift, and go to state 80
    READINTEGER     shift, and go to state 81
    IF              shift, and go to state 82
    NEW             shift, and go to state 83
    READLINE        shift, and go to state 84
    NEWARRAY        shift, and go to state 85
    TNULL           shift, and go to state 86
    FOR             shift, and go to state 87
    RETURN          shift, and go to state 88
    PRINT           shift, and go to state 89
    ID              shift, and go to state 90
    CONSINTEGERDEC  shift, and go to state 91
    CONSINTEGERHEX  shift, and go to state 92
    CONSDOUBLEDEC   shift, and go to state 93
    CONSDOUBLECIEN  shift, and go to state 94
    CONSSTRING      shift, and go to state 95
    CONSBOOLEAN     shift, and go to state 96
    SUBTRACTION     shift, and go to state 97
    NEGATION        shift, and go to state 98
    LPAREN          shift, and go to state 99
    LBRACE          shift, and go to state 62

    SEMICOLON  reduce using rule 60 (ExprOpcional)
    $default   reduce using rule 40 (BlockStmts)

    StmtBlock     go to state 100
    BlockStmts    go to state 101
    Stmt          go to state 102
    IfStmt        go to state 103
    WhileStmt     go to state 104
    ForStmt       go to state 105
    ReturnStmt    go to state 106
    BreakStmt     go to state 107
    PrintStmt     go to state 108
    ExprOpcional  go to state 109
    Expr          go to state 110
    LValue        go to state 111
    Call          go to state 112
    Constant      go to state 113


State 74

   34 Prototype: VOID ID LPAREN Formals . RPAREN SEMICOLON Prototype

    RPAREN  shift, and go to state 114


State 75

   33 Prototype: Type ID LPAREN Formals . RPAREN SEMICOLON Prototype

    RPAREN  shift, and go to state 115


State 76

   27 OtroID: COMMA ID OtroID .

    $default  reduce using rule 27 (OtroID)


State 77

   37 BlockVariables: VariableDecl BlockVariables .

    $default  reduce using rule 37 (BlockVariables)


State 78

   64 Expr: THIS .

    $default  reduce using rule 64 (Expr)


State 79

   52 WhileStmt: WHILE . LPAREN Expr RPAREN Stmt

    LPAREN  shift, and go to state 116


State 80

   55 BreakStmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 117


State 81

   82 Expr: READINTEGER . LPAREN RPAREN

    LPAREN  shift, and go to state 118


State 82

   49 IfStmt: IF . LPAREN Expr RPAREN Stmt ElseStmt

    LPAREN  shift, and go to state 119


State 83

   84 Expr: NEW . LPAREN ID RPAREN

    LPAREN  shift, and go to state 120


State 84

   83 Expr: READLINE . LPAREN RPAREN

    LPAREN  shift, and go to state 121


State 85

   85 Expr: NEWARRAY . LPAREN Expr COMMA Type RPAREN

    LPAREN  shift, and go to state 122


State 86

   99 Constant: TNULL .

    $default  reduce using rule 99 (Constant)


State 87

   53 ForStmt: FOR . LPAREN ExprOpcional SEMICOLON ExprOpcional SEMICOLON ExprOpcional RPAREN Stmt

    LPAREN  shift, and go to state 123


State 88

   54 ReturnStmt: RETURN . ExprOpcional SEMICOLON

    THIS            shift, and go to state 78
    READINTEGER     shift, and go to state 81
    NEW             shift, and go to state 83
    READLINE        shift, and go to state 84
    NEWARRAY        shift, and go to state 85
    TNULL           shift, and go to state 86
    ID              shift, and go to state 90
    CONSINTEGERDEC  shift, and go to state 91
    CONSINTEGERHEX  shift, and go to state 92
    CONSDOUBLEDEC   shift, and go to state 93
    CONSDOUBLECIEN  shift, and go to state 94
    CONSSTRING      shift, and go to state 95
    CONSBOOLEAN     shift, and go to state 96
    SUBTRACTION     shift, and go to state 97
    NEGATION        shift, and go to state 98
    LPAREN          shift, and go to state 99

    $default  reduce using rule 60 (ExprOpcional)

    ExprOpcional  go to state 124
    Expr          go to state 110
    LValue        go to state 111
    Call          go to state 112
    Constant      go to state 113


State 89

   56 PrintStmt: PRINT . LPAREN Expr OtraExpr RPAREN SEMICOLON

    LPAREN  shift, and go to state 125


State 90

   86 LValue: ID .
   89 Call: ID . LPAREN Actuals RPAREN

    LPAREN  shift, and go to state 126

    $default  reduce using rule 86 (LValue)


State 91

   93 Constant: CONSINTEGERDEC .

    $default  reduce using rule 93 (Constant)


State 92

   94 Constant: CONSINTEGERHEX .

    $default  reduce using rule 94 (Constant)


State 93

   95 Constant: CONSDOUBLEDEC .

    $default  reduce using rule 95 (Constant)


State 94

   96 Constant: CONSDOUBLECIEN .

    $default  reduce using rule 96 (Constant)


State 95

   98 Constant: CONSSTRING .

    $default  reduce using rule 98 (Constant)


State 96

   97 Constant: CONSBOOLEAN .

    $default  reduce using rule 97 (Constant)


State 97

   72 Expr: SUBTRACTION . Expr

    THIS            shift, and go to state 78
    READINTEGER     shift, and go to state 81
    NEW             shift, and go to state 83
    READLINE        shift, and go to state 84
    NEWARRAY        shift, and go to state 85
    TNULL           shift, and go to state 86
    ID              shift, and go to state 90
    CONSINTEGERDEC  shift, and go to state 91
    CONSINTEGERHEX  shift, and go to state 92
    CONSDOUBLEDEC   shift, and go to state 93
    CONSDOUBLECIEN  shift, and go to state 94
    CONSSTRING      shift, and go to state 95
    CONSBOOLEAN     shift, and go to state 96
    SUBTRACTION     shift, and go to state 97
    NEGATION        shift, and go to state 98
    LPAREN          shift, and go to state 99

    Expr      go to state 127
    LValue    go to state 111
    Call      go to state 112
    Constant  go to state 113


State 98

   81 Expr: NEGATION . Expr

    THIS            shift, and go to state 78
    READINTEGER     shift, and go to state 81
    NEW             shift, and go to state 83
    READLINE        shift, and go to state 84
    NEWARRAY        shift, and go to state 85
    TNULL           shift, and go to state 86
    ID              shift, and go to state 90
    CONSINTEGERDEC  shift, and go to state 91
    CONSINTEGERHEX  shift, and go to state 92
    CONSDOUBLEDEC   shift, and go to state 93
    CONSDOUBLECIEN  shift, and go to state 94
    CONSSTRING      shift, and go to state 95
    CONSBOOLEAN     shift, and go to state 96
    SUBTRACTION     shift, and go to state 97
    NEGATION        shift, and go to state 98
    LPAREN          shift, and go to state 99

    Expr      go to state 128
    LValue    go to state 111
    Call      go to state 112
    Constant  go to state 113


State 99

   66 Expr: LPAREN . Expr RPAREN
